# advent_of_code_2021

./: Cargo.toml
day1/: input
day1/src/: main.rs
day2/: Cargo.toml
day2/src/: command.rs  main.rs  submarin.rs
day3/: Cargo.toml
day3/src/: main.rs
day4/: Cargo.toml
day4/src/: board.rs  main.rs  part1.rs
day5/: Cargo.toml
day5/src/: main.rs
day6/: Cargo.toml
day6/src/: main.rs  part1.rs
day7/: Cargo.toml
day7/src/: main.rs  part1.rs
day8/: Cargo.toml  solver.txt
day8/src/: main.rs
utils/src/: lib.rs
