[package]
name = "day2"
version = "0.1.0"
edition = "2021"
default-run = "part2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "part2"
path = "./src/main.rs"

[[bin]]
name = "part1"
path = "./src/part1.rs"

[dependencies]
utils = { path = "../utils" }
